--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@ oneSignal_options['notifyButton']['text'] = {};
 				<div class="elementor-widget-container">
 						
 	    	<nav id="site-navigation" class="main-navigation hitem ">			
-				<ul id="primary-menu" class="menu"><li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-16332"><a href="https://blog.sizzle.ng/">Blog</a></li>
+				<ul id="primary-menu" class="menu">
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-16334"><a href="frequently-asked-questions/index.html">FAQ</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-16333"><a href="contact-us/index.html">Contact Us</a></li>
 </ul>			</nav>
@@ -443,13 +443,12 @@ oneSignal_options['notifyButton']['text'] = {};
 							<ul id="menu-mobile-menu" class="mobile_mainmenu none-style"><li id="menu-item-16338" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-16338"><a href="https://blog.sizzle.ng/">Blog</a></li>
 <li id="menu-item-16339" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-16339"><a href="frequently-asked-questions/index.html">FAQ</a></li>
 <li id="menu-item-16340" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-16340"><a href="contact-us/index.html">Contact Us</a></li>
-<li id="menu-item-16341" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-16341"><a href="https://app.sizzle.ng/auth/login">Log In</a></li>
-<li id="menu-item-16342" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-16342"><a href="https://app.sizzle.ng/auth/signup">Sign Up</a></li>
-<li id="menu-item-16343" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-16343"><a href="https://app.sizzle.ng/api/docs">API</a></li>
+<li id="menu-item-16341" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-16341"><a href="https://bluepoint.ng/user/login">Log In</a></li>
+<li id="menu-item-16342" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-16342"><a href="https://bluepoint.ng/user/register">Sign Up</a></li>
 </ul>						</div>  
 						<div class="mmenu-footer">
 							<div>
-								<a href="mailto:contact@sizzle.ng" class="mmenu-contact">contact@sizzle.ng</a>			                  
+								<a href="mailto:contact@sizzle.ng" class="mmenu-contact">contact@bluepoint.ng</a>			                  
 			                  <nav class="mmenu-socials">
 			                  	<a href="#">
 			                  		<i aria-hidden="true" class=" uil-twitter"></i></a>
@@ -615,7 +614,7 @@ oneSignal_options['notifyButton']['text'] = {};
 								<div data-cue="sbSlideInDown" data-duration="700" data-delay="600" class="elementor-element elementor-element-4ad7c8fc elementor-align-center elementor-widget elementor-widget-ot-btn" data-id="4ad7c8fc" data-element_type="widget" data-widget_type="ot-btn.default">
 				<div class="elementor-widget-container">
 					<div class="ot-button-wrapper">
-			<a href="https://app.sizzle.ng/auth/signup" class="octf-btn octf-btn-lg">
+			<a href="https://bluepoint.ng/user/register" class="octf-btn octf-btn-lg">
 				Sign Up							</a>
 	    </div>
 	    		</div>
@@ -652,9 +651,9 @@ oneSignal_options['notifyButton']['text'] = {};
 				<div class="elementor-widget-container">
 					<div class="ot-icon-box box-content">
 						<div class="ot-icon-box__icon">
-				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 255.98 256"><circle class="fill-primary" cx="128" cy="26.67" r="26.67"/><circle class="fill-primary" cx="202.67" cy="176" r="26.67"/><circle class="fill-primary" cx="53.33" cy="176" r="26.67"/><path class="fill-primary" d="M173.33 106.67H82.66a8 8 0 01-8-8v-5.33A29.35 29.35 0 01104 64h48a29.35 29.35 0 0129.33 29.32v5.33a8 8 0 01-8 8.02zM248 256h-90.67a8 8 0 01-8-8v-5.33a29.36 29.36 0 0129.33-29.33h48A29.36 29.36 0 01256 242.67V248a8 8 0 01-8 8zm-149.33 0H8a8 8 0 01-8-8v-5.33a29.36 29.36 0 0129.33-29.33h48a29.37 29.37 0 0129.33 29.33V248a8 8 0 01-8 8z"/><path class="fill-secondary" d="M29.33 136.13a8 8 0 01-8-8 107.1 107.1 0 0161.73-96.77 8 8 0 116.73 14.51 91 91 0 00-52.48 82.26 8 8 0 01-7.98 8zm197.34 0a8 8 0 01-8-8 91 91 0 00-52.48-82.26 8 8 0 116.74-14.51 107.09 107.09 0 0161.73 96.77 8 8 0 01-8 8zM128 234.8a105.08 105.08 0 01-11.15-.58 8 8 0 011.66-15.9 93.73 93.73 0 0019.6-.06 8 8 0 011.76 15.9 110.68 110.68 0 01-11.87.64z"/></svg>	        </div>
+				<i class="fab fa-linkedin"></i> </div>
 	        	        <div class="ot-icon-box__content">
-	        	<h4 class="icon-box-title">Digital Marketing Services</h4>				<div class="icon-box-des">All the tools you need to grow your following & engagement all over social media. Grow fast & efficiently</div>							</div>	
+	        	<h4 class="icon-box-title">Get Active Engagements and Connections</h4></div>	
 	    </div>
 	    		</div>
 				</div>
@@ -715,12 +714,12 @@ oneSignal_options['notifyButton']['text'] = {};
 								<div class="elementor-element elementor-element-706d9bec elementor-widget elementor-widget-ot-heading" data-id="706d9bec" data-element_type="widget" data-widget_type="ot-heading.default">
 				<div class="elementor-widget-container">
 					<div class="ot-heading">
-	        <span class="ot-heading__sub">WHAT IS SIZZLE.NG ALL ABOUT?</span>	        <h3 class="ot-heading__title h1">A social media marketing platform that actually helps you <span class="underline-3 style-2 yellow">Grow</span></h3>	    </div>
+	        <span class="ot-heading__sub">WHAT IS BLUEPOINT.NG ALL ABOUT?</span>	        <h3 class="ot-heading__title h1">A social media marketing platform that actually helps you <span class="underline-3 style-2 yellow">Grow</span></h3>	    </div>
 	    		</div>
 				</div>
 				<div data-cue="sbSlideInDown" data-duration="700" data-delay="300" class="elementor-element elementor-element-22b9bd3 elementor-widget elementor-widget-text-editor" data-id="22b9bd3" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<h4 class="elementor-heading-title elementor-size-default"><span style="color: #bd0101;">Sizzle.ng is The Best Website In Nigeria To Grow Your Social Media Followers, Buy Social Media Accounts, Promote Your Music, Buy Websites &amp; So Much More.</span></h4>						</div>
+							<h4 class="elementor-heading-title elementor-size-default"><span style="color: #14213b;">Use Bluepoint.ng to Grow Your Social Media Followers and So Much More.</span></h4>						</div>
 				</div>
 				<div class="elementor-element elementor-element-2555f936 elementor-widget elementor-widget-ot-big-tabs" data-id="2555f936" data-element_type="widget" data-widget_type="ot-big-tabs.default">
 				<div class="elementor-widget-container">
@@ -777,16 +776,16 @@ oneSignal_options['notifyButton']['text'] = {};
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div data-cue="sbSlideInDown" data-duration="700" class="elementor-element elementor-element-102014ae elementor-widget elementor-widget-heading" data-id="102014ae" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h2 class="elementor-heading-title elementor-size-default">Sizzle.ng Is A Marketing Tool</h2>		</div>
+			<h2 class="elementor-heading-title elementor-size-default">DRIVE YOUR BUSINESS GROWTH WITH OUR BLUEPOINT EXPERTISE</h2>		</div>
 				</div>
 				<div class="elementor-element elementor-element-5d5fa975 elementor-widget elementor-widget-text-editor" data-id="5d5fa975" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<p>If you are a creator looking to market your work and gain a wider audience, look no further! Our range of Marketing products &amp; Services are specifically designed for creators like you. With easy-to-use features and a user-friendly interface, our website makes it easy to promote your creations and connect with potential customers. Whether you&#8217;re a musician, artist, writer, or any other kind of creator, our website has the tools you need to take your marketing to the next level.</p>						</div>
+							<p>From Unexpected Friendships to Lasting Relationships. Bluepoint is a Cheap SMM and SEO service Provider and Reseller Website. Fast,Reliable and Secure, offering World's Best Quality and Cheapest Automatic Social Media Services which are specially developed for Resellers with High Speed order completion!</div>
 				</div>
 				<div data-cue="sbSlideInDown" data-duration="700" data-delay="600" class="elementor-element elementor-element-60bb95c8 elementor-align-left elementor-tablet-align-center elementor-widget elementor-widget-ot-btn" data-id="60bb95c8" data-element_type="widget" data-widget_type="ot-btn.default">
 				<div class="elementor-widget-container">
 					<div class="ot-button-wrapper">
-			<a href="https://app.sizzle.ng/auth/signup" class="octf-btn octf-btn-lg">
+			<a href="https://bluepoint.ng/user/register" class="octf-btn octf-btn-lg">
 				Sign Up							</a>
 	    </div>
 	    		</div>
@@ -1341,7 +1340,7 @@ oneSignal_options['notifyButton']['text'] = {};
 				<div data-cue="sbSlideInDown" data-duration="700" data-delay="600" class="elementor-element elementor-element-c4dd9fe elementor-align-left elementor-tablet-align-center elementor-widget elementor-widget-ot-btn" data-id="c4dd9fe" data-element_type="widget" data-widget_type="ot-btn.default">
 				<div class="elementor-widget-container">
 					<div class="ot-button-wrapper">
-			<a href="https://app.sizzle.ng/auth/signup" class="octf-btn octf-btn-lg">
+			<a href="https://bluepoint.ng/user/register" class="octf-btn octf-btn-lg">
 				Sign Up							</a>
 	    </div>
 	    		</div>
@@ -1891,7 +1890,7 @@ oneSignal_options['notifyButton']['text'] = {};
 				<div data-cue="sbSlideInDown" data-duration="700" data-delay="600" class="elementor-element elementor-element-7134d3f elementor-align-center elementor-widget elementor-widget-ot-btn" data-id="7134d3f" data-element_type="widget" data-widget_type="ot-btn.default">
 				<div class="elementor-widget-container">
 					<div class="ot-button-wrapper">
-			<a href="https://app.sizzle.ng/auth/signup" class="octf-btn octf-btn-lg">
+			<a href="https://bluepoint.ng/user/register" class="octf-btn octf-btn-lg">
 				Sign Up Now							</a>
 	    </div>
 	    		</div>
