--- a/index.html
+++ b/index.html
@@ -37,20 +37,6 @@
   <link rel="stylesheet" type="text/css" href="../cdn.mypanel.link/global/tp2jssyocan4ndm1.css">
 </head>
   <body class="guest">
-  <div class="topStrip">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-12">
-          <ul>
-            <li><a href="#"><i class="fa fa-phone"></i>
-              Mail Only</a></li>
-            <li><a href="#">|</a></li>
-            <li><a href="#"><i class="fas fa-envelope"></i>contact@bluepoint.ng</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
   <nav class="navbar navbar-default navbar-static-top ">
     <div class="container">
       <div class="navbar-header">
@@ -66,13 +52,11 @@
       </div>
       <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                      <li class="active" ><a href="https://bluepoint.ng/user/login">Login</a></li>
-                      <li><a href="services.html">Services</a></li>
+                      <li><a href="">Services</a></li>
                       <li><a href="https://bluepoint.ng/user/register">Register</a></li>
-                      <li><a href="terms.html">Terms</a></li>
-                      <li><a href="buy-instagram-followers.html">Buy Instagram Followers</a></li>
-                      <li><a href="buy-youtube-views-and-subscribers.html">Buy YouTube Views and Subscribers</a></li>
-                      <li><a href="https://therealowlet.com/signup">Sign Up get N300</a></li>
+                      <li><a href="">Buy Instagram Followers</a></li>
+                      <li><a href="">Buy YouTube Views and Subscribers</a></li>
+                      <li><a href="https://bluepoint.ng/user/register">Register</a></li>
                   </ul>
       </div>
     </div>
@@ -84,12 +68,6 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-6">
-            <img class="icon icon11" src="#">
-            <img class="icon icon11" src="#">
-            <img class="icon icon11" src="#">
-            <img class="icon icon11" src="#">
-            <img class="icon icon15" src="../cdn.mypanel.link/6f7c88/mrd7b94giuc71hns.png">
-            <img class="icon icon11" src="../cdn.mypanel.link/6f7c88/mrd7b94giuc71hns.png">
             <h1 class="slogan">Boost Your</h1>
             <h3>Social Media Marketing</h3>
             <h4>From Unexpected Friendships to Lasting Relationships.</h4>
@@ -109,29 +87,14 @@
     </div>
   </div>
 </div>
-  <div class="">
-  <div class="">
-    <div class="col-sm-12">
-      <div class="">
-        <img src="#">
-      </div>
-    </div>
-  </div>
 </div>
 </section>
 <section class="secondSec">
 <div class="container">
       <div class="row">
         <div class="col-sm-6">
-              <img class="icon icon11" src="../cdn.mypanel.link/6f7c88/mfl6p9cb0dshe9hw.png">
-              <img class="icon icon12" src="../cdn.mypanel.link/6f7c88/3qdd689argaez2k3.jpg">
           </div>
-          <div class="col-sm-6">
-             <img class="icon icon12" src="#">
-              <img class="icon icon13" src="#">
-            <img class="icon icon14" src="#">
-            
-              
+          <div class="col-sm-6">    
               <div class="secTitle">
                   <p>Theowletonline</p>
                   <h2>Features</h2>
@@ -182,7 +145,7 @@
       <h6>Ready to Get Started?</h6>
     </div>
           <div class="col-sm-5">
-      <a href="signup.html">Get Started Now</a>
+      <a href="https://bluepoint.ng/user/register">Register Now</a>
     </div>
   </div>
 </div>
