--- a/index.html
+++ b/index.html
@@ -67,20 +67,18 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <h1 class="slogan">Boost Your</h1>
-          <h3>Social Media Marketing</h3>
-          <h4>From Unexpected Friendships to Lasting Relationships.</h4>
-          <p>Theowletonline is a Cheap SMM and SEO service Provider and Reseller Website. Fast,Reliable and Secure, offering World's Best Quality and Cheapest Automatic Social Media Services which are specially developed for Resellers with High Speed order completion!.</p>
+          <h1 class="slogan">DRIVE YOUR BUSINESS</h1>
+          <h3> GROWTH WITH OUR BLUEPOINT EXPERTISE</h3>
+          <p>From Unexpected Friendships to Lasting Relationships. Bluepoint is a Cheap SMM and SEO service Provider and Reseller Website. Fast,Reliable and Secure, offering World's Best Quality and Cheapest Automatic Social Media Services which are specially developed for Resellers with High Speed order completion!</p>
              
           <ul class="customBtns">
-            <li><a href="https://www.youtube.com/channel/UCWimeDcakI6eHAxR3lLwuuA">Watch video</a></li>
+            <li><a href="#">Register</a></li>
             <li><a href="services.html">Our Services</a></li>
           </ul>
         </div>
           <div class="col-sm-6">
             <div class="animationBox">
-              <img class="placeHolder" src="#">
-              <img class="shoutingGirl" src="../cdn.mypanel.link/6f7c88/2oeyh67zswh8x1h7.jpg">
+              <img class="shoutingGirl" src="../cdn.mypanel.link/6f7c88/BLUEPOINT-1020x1024.png">
             </div>
           </div>
       </div>
@@ -91,28 +89,30 @@
     <div class="container">
           <div class="row">
             <div class="col-sm-6">
-                  <img class="icon icon11" src="../cdn.mypanel.link/6f7c88/mfl6p9cb0dshe9hw.png">
-                  <img class="icon icon12" src="../cdn.mypanel.link/6f7c88/3qdd689argaez2k3.jpg">
+              <img class="icon icon12" src="../cdn.mypanel.link/6f7c88/BLUEPOINT-1020x1024.png">
               </div>
               <div class="col-sm-6">
                   <div class="secTitle">
-                      <p>Theowletonline</p>
-                      <h2>Features</h2>
+                      <p>Why You Choose Our </p>
+                      <h2>Bluepoint Services</h2>
                   </div>
-                  <p>WANT TO INCREASE YOUR ONLINE SOCIAL PRESENCE?</p><p>
-                  </p><p>We’re the online marketing veterans. We provide a comprehensive set of results-orientated online media services that help you grow and build your online presence.
-                  </p><p>
-                  </p><p>Tired of looking at Hundreds of Website with services that simply don't work? Check our Major Services for Social Media with the Best Quality and Quickest Delivery
-      </p>
-                  <p>We do Prefer Support LIVE via email support for Instant Response getting any Information and re-solve any issue soon as possible. We provide the best customer support.</p>
+                  <p>Below Are Some Reasons Why You Should Choose Us;</p>
+                  <p><b>Incredible prices:</b> 
+                    Unbeatable value awaits with our Bluepoint Services. Enjoy premium quality without breaking the bank. Discover a range of solutions tailored to your needs, all at prices that will leave you amazed.</p>
+                  <p><b>Delivered promptly:</b>
+                    Say goodbye to waiting with our swift and efficient service. We understand the importance of time, which is why we guarantee prompt delivery of our services. Trust us to meet your deadlines with precision and reliability.</p>
+                  <p><b>Various payment methods</b> 
+                    Convenience meets flexibility with our array of payment options. Enjoy hassle-free transactions that suit your preferences, making your experience with us seamless.</p>
+                  <p><b>Outstanding services</b> 
+                    Outstanding services are the hallmark of a great business. Customers expect a high level of service, they are more likely to become loyal patrons.</p>
                   <ul>
                       <li>
                           <div class="feaBox">
                               <span class="icon green">
                                   <i class="fas fa-hourglass-start"></i>
                               </span>
-                              <h4>0.12 sec</h4>
-                              <p>An Order Is Made every</p>
+                              <h4>500+</h4>
+                              <p>Completed Orders</p>
                           </div>
                       </li>
                       <li>
@@ -120,8 +120,8 @@
                               <span class="icon red">
                                   <i class="fas fa-signal"></i>
                               </span>
-                              <h4>34,100,000+</h4>
-                              <p>Orders Completed</p>
+                              <h4>350+</h4>
+                              <p>Total Active Users</p>
                           </div>
                       </li>
                       <li>
@@ -155,8 +155,8 @@
   <div class="row">
           <div class="col-sm-6">
               <div class="secTitle">
-                  <p>The-Owlet</p>
-                  <h2>Services</h2>
+                  <p>What we provide</p>
+                  <h2>Our Services</h2>
               </div>
               <ul>
                   <li>
@@ -185,22 +185,6 @@
                   </li>
                   <li>
                       <div class="serBox">
-                          <span class="icon green">
-                              <i class="fab fa-soundcloud"></i>
-                          </span>
-                          <h4>Soundcloud</h4>
-                      </div>
-                  </li>
-                  <li>
-                      <div class="serBox">
-                          <span class="icon red">
-                              <i class="fab fa-vimeo-v"></i>
-                          </span>
-                          <h4>Vimeo</h4>
-                      </div>
-                  </li>
-                  <li>
-                      <div class="serBox">
                           <span class="icon yellow">
                               <i class="fab fa-instagram"></i>
                           </span>
@@ -210,7 +194,7 @@
               </ul>
           </div>
     <div class="col-sm-6">
-      <img class="icon icon17" src="../cdn.mypanel.link/6f7c88/esip7hytmtl4yumx.jpg">
+      <img class="icon icon12" src="../cdn.mypanel.link/6f7c88/BLUEPOINT-1020x1024.png">
     </div>
   </div>
       <div class="row chatRow">
